fix(page-pricing): fix margin-bottom and gap

--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -10,13 +10,13 @@
   }
 
   h2 {
-    margin-bottom: 50px;
+    margin-bottom: 48px;
   }
 
   .pricing-container {
     @include flex(row, space-between, center);
     flex-wrap: wrap;
-    row-gap: 50px;
+    row-gap: 48px;
 
     width: 100%;
   }
